WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47844
RVCT fails to compile DateMath.cpp due to overloaded function pow
https://bugs.webkit.org/show_bug.cgi?id=47844
Summary
RVCT fails to compile DateMath.cpp due to overloaded function pow
Kwang Yul Seo
Reported
2010-10-18 13:45:30 PDT
RVCT fails to compile DateMath.cpp with the following compile error: "..\JavaScriptCore\wtf\DateMath.cpp", line 642: Error: #308: more than one instance of overloaded function "pow" matches the argument list: function "std::pow(double, double)" function "std::pow(float, float)" function "std::pow(float, int)" function "std::pow(double, int)" function "std::pow(long double, long double)" function "std::pow(long double, int)" argument types are: (int, long) seconds += fracSeconds * pow(10, -numFracDigits); We need to add an explicit cast to the arguments of pow.
Attachments
Patch
(1.26 KB, patch)
2010-10-18 13:49 PDT
,
Kwang Yul Seo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kwang Yul Seo
Comment 1
2010-10-18 13:49:12 PDT
Created
attachment 71076
[details]
Patch
David Kilzer (:ddkilzer)
Comment 2
2010-10-19 11:49:53 PDT
Comment on
attachment 71076
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2010-10-19 12:43:54 PDT
Comment on
attachment 71076
[details]
Patch Clearing flags on attachment: 71076 Committed
r70076
: <
http://trac.webkit.org/changeset/70076
>
WebKit Commit Bot
Comment 4
2010-10-19 12:43:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug